# ai_for_hr

./: .env.rename  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  debug_doc.py  debug_doc_v2.py  debug_doc_v3.py  pyproject.toml  test_azure.py  test_split.py
backend/app/: cache.py  config.py  database.py  main.py
backend/app/api/v1/: analytics.py  documents.py  employees.py  evaluator.py  generator.py  goals.py
backend/app/core/: analytics_engine.py  embeddings.py  evaluator.py  generator.py  llm_client.py  prompts.py  rag.py  schemas.py
backend/app/models/: __init__.py  models.py
backend/app/scripts/: index_documents.py
backend/app/services/: document_indexer.py  goal_service.py  vector_store.py
backend/data/calibration/: expert_markup.json  rag_test_queries.json
backend/scripts/: eval_prompts.py  import_hackathon_data.py  index_documents.py  seed_database.py
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
frontend/src/api/: client.js
frontend/src/components/: BeforeAfter.jsx  DepartmentHeatmap.jsx  GoalCard.jsx  Sidebar.jsx  SmartRadarChart.jsx
frontend/src/pages/: Analytics.jsx  DocumentBrowser.jsx  GoalEvaluator.jsx  GoalGenerator.jsx  History.jsx
frontend/src/utils/: history.js
