[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hr-goals-ai"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "anthropic>=0.28.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "greenlet>=3.0.0",
    "rank-bm25>=0.2.2",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
